# lieval

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
src/: context.rs  error.rs  eval.rs  lib.rs  parse.rs  token.rs  util.rs
tests/: test.rs
