[package]
name = "lieval"
version = "0.2.5"
authors = ["taka8 <taka87874k4@gmail.com>"]
edition = "2021"
description = "A lightweight Rust crate for parsing and evaluating mathematical expressions from strings."
documentation = "https://docs.rs/lieval"
repository = "https://github.com/taka8t/lieval"
keywords = ["expression", "math", "evaluator", "parsing"]
categories = ["parsing", "mathematics"]
readme = "README.md"
license = "MIT"

[features]
default = []
fxhash = ["dep:fxhash"]

[dependencies]
# Optional dependencies
fxhash = { version = "0.2", optional = true }